--- a/celcius fahrenheit.html
+++ b/celcius fahrenheit.html
@@ -18,13 +18,13 @@
     </div>
     <div class="icon-group">
         <a href="javascript:void(0);" onclick="document.getElementById('convert').click()" class="icon-link">
-            <img src="D:\NANDA\AI Pict\th (1).jpg" alt="Celsius to Fahrenheit">
+            <img src="th (1).jpg" alt="Celsius to Fahrenheit">
         </a>
         <a href="javascript:void(0);" onclick="document.getElementById('reset').click()" class="icon-link">
-            <img src="D:\NANDA\AI Pict\th (3).jpg" alt="Reset">
+            <img src="th (3).jpg" alt="Reset">
         </a>
         <a href="javascript:void(0);" onclick="document.getElementById('reverse').click()" class="icon-link">
-            <img src="D:\NANDA\AI Pict\th.jpg" alt="Fahrenheit to Celsius">
+            <img src="th.jpg" alt="Fahrenheit to Celsius">
         </a>
         
     </div>
