--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Celcius Fahrenheit</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -28,7 +28,7 @@
         </a>
         
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <div class="calculation">
         <p id="calculationMethod"></p>
     </div>
