--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Celcius Fahrenheit</title>
     <link rel="stylesheet" href="style.css">
+<script src="https://cdn.amplitude.com/libs/analytics-browser-2.11.1-min.js.gz"></script><script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.6.22-min.js.gz"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('74fb880e1b54ac4b6baa2fb751914b4e', {"autocapture":{"elementInteractions":true}});</script>
 </head>
 <body>
     <div class="container">
